First working version. Support Adenui temp sensor only